# microservice_Python_FastAPI

./: README.md  main.py  pyproject.toml
api/: base_api.py  user_api.py
data/: login_data.py  register_data.py  update_data.py  user_data.py  users.txt
model_data/: login_user_model.py  register_user_model.py  update_user_model.py
tests/: test_create_user.py  test_delete_user.py  test_get_users.py  test_login.py  test_register.py  test_update.py
utils/: paths.py  random_data.py
